Tweak, rename outputs

--- a/read_ner.ipynb
+++ b/read_ner.ipynb
@@ -5,18 +5,51 @@
    "metadata": {},
    "source": [
     "# Read NER data\n",
-    "Reads the data format used in https://github.com/glample/tagger (~CoNLL) and converts it to json.\n",
     "\n",
-    "You have to clone the above repository to get the used data."
+    "Reads the CoNLL'03 English data from https://github.com/glample/tagger and converts it to json.\n",
+    "\n",
+    "Download the originals (if we don't have them already):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File ‘eng.train’ already there; not retrieving.\n",
+      "\n",
+      "File ‘eng.testa’ already there; not retrieving.\n",
+      "\n",
+      "File ‘eng.testb’ already there; not retrieving.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget -nc https://github.com/glample/tagger/raw/master/dataset/eng.train\n",
+    "!wget -nc https://github.com/glample/tagger/raw/master/dataset/eng.testa\n",
+    "!wget -nc https://github.com/glample/tagger/raw/master/dataset/eng.testb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conversion:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "\n",
     "\n",
     "def to_json(in_path, out_path):\n",
     "    sentences = []\n",
@@ -30,7 +63,7 @@
     "                    sentences.append({'text': sentence_tokens, 'tags': sentence_tags})\n",
     "                sentence_tokens = []\n",
     "                sentence_tags = []\n",
-    "            elif '-DOCSTART' in line: # These are metadata lines we can skip\n",
+    "            elif '-DOCSTART-' in line: # These are metadata lines we can skip\n",
     "                continue\n",
     "            else:\n",
     "                data = line.strip().split()\n",
@@ -42,30 +75,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "to_json('tagger/dataset/eng.train', 'data/ner_train.json')\n",
-    "to_json('tagger/dataset/eng.testa', 'data/ner_test.json')"
+    "Run conversion, renaming the files in the process."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "to_json('eng.train', 'data/ner-conll03-en-train.json')\n",
+    "to_json('eng.testa', 'data/ner-conll03-en-dev.json')\n",
+    "to_json('eng.testb', 'data/ner-conll03-en-test.json')"
+   ]
   }
  ],
  "metadata": {
@@ -84,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
