Tweak for colab

--- a/rnn_named_entity_recognition.ipynb
+++ b/rnn_named_entity_recognition.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h2>Named entity recognition</h2>\n",
     "<br>\n",
-    "Sequence labelling: input word sequence, output tag sequence"
+    "Sequence labelling: input word sequence, output tag sequence; inputs and outputs paired (one output for one input)."
    ]
   },
   {
@@ -138,12 +138,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the development (validation) data. A separate validation set involving different documents than the train data is used as splitting one set of documents into training and validation data would result in overly optimistic evaluation results (repeated names)."
+    "Load the development (validation) data. A separate validation set involving different documents than the train data is used as splitting one set of documents into training and validation data would result in overly optimistic evaluation results due to e.g. repeated names."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,24 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-04-02 09:34:32--  https://dl.fbaipublicfiles.com/fasttext/vectors-english/wiki-news-300d-1M.vec.zip\n",
-      "Resolving dl.fbaipublicfiles.com (dl.fbaipublicfiles.com)... 104.22.74.142, 104.22.75.142\n",
-      "Connecting to dl.fbaipublicfiles.com (dl.fbaipublicfiles.com)|104.22.74.142|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 681808098 (650M) [application/zip]\n",
-      "Saving to: ‘wiki-news-300d-1M.vec.zip’\n",
-      "\n",
-      "wiki-news-300d-1M.v 100%[===================>] 650.22M  1.15MB/s    in 13m 23s \n",
-      "\n",
-      "2020-04-02 09:47:56 (829 KB/s) - ‘wiki-news-300d-1M.vec.zip’ saved [681808098/681808098]\n",
-      "\n"
+      "File ‘wiki-news-300d-1M.vec.zip’ already there; not retrieving.\r\n",
+      "\r\n"
      ]
     }
    ],
@@ -593,17 +584,9 @@
    ],
    "source": [
     "import tensorflow as tf\n",
-    "\n",
-    "\n",
-    "### Only needed when sharing GPUs, this avoids blocking the whole GPU, you don't need this stuff\n",
-    "from keras.backend.tensorflow_backend import set_session\n",
-    "config = tf.ConfigProto()\n",
-    "config.gpu_options.per_process_gpu_memory_fraction = 0.3\n",
-    "set_session(tf.Session(config=config))\n",
-    "### ---end of weird stuff\n",
-    "\n",
-    "\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
+    "\n",
     "print(\"Old shape:\", vectorized_data.shape)\n",
     "vectorized_data_padded=pad_sequences(vectorized_data, padding='post', maxlen=max(lengths))\n",
     "print(\"New shape:\", vectorized_data_padded.shape)\n",
@@ -750,9 +733,9 @@
     }
    ],
    "source": [
-    "from keras.models import Model\n",
-    "from keras.layers import Input, Dense, Embedding, Activation, TimeDistributed\n",
-    "from keras.optimizers import SGD, Adam\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import Input, Dense, Embedding, Activation, TimeDistributed\n",
+    "from tensorflow.keras.optimizers import SGD, Adam\n",
     "\n",
     "\n",
     "example_count, sequence_len = vectorized_data_padded.shape\n",
@@ -775,27 +758,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_1\"\n",
+      "Model: \"model_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 113)               0         \n",
+      "input_2 (InputLayer)         (None, 113)               0         \n",
       "_________________________________________________________________\n",
-      "embedding_1 (Embedding)      (None, 113, 300)          15000600  \n",
+      "embedding_2 (Embedding)      (None, 113, 300)          15000600  \n",
       "_________________________________________________________________\n",
-      "time_distributed_1 (TimeDist (None, 113, 100)          30100     \n",
+      "lstm_1 (LSTM)                (None, 113, 100)          160400    \n",
       "_________________________________________________________________\n",
-      "time_distributed_2 (TimeDist (None, 113, 4)            404       \n",
+      "dense_3 (Dense)              (None, 113, 4)            404       \n",
       "=================================================================\n",
-      "Total params: 15,031,104\n",
-      "Trainable params: 30,504\n",
+      "Total params: 15,161,404\n",
+      "Trainable params: 160,804\n",
       "Non-trainable params: 15,000,600\n",
       "_________________________________________________________________\n",
       "None\n"
@@ -803,7 +786,7 @@
     }
    ],
    "source": [
-    "print(model.summary())"
+    "print(rnn_model.summary())"
    ]
   },
   {
@@ -982,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +981,7 @@
     "\n",
     "def build_rnn_model(example_count, sequence_len, class_count, rnn_size, vocabulary, vector_size, pretrained):\n",
     "    inp=Input(shape=(sequence_len,))\n",
-    "    embeddings=Embedding(len(vocabulary), vector_size, mask_zero=False, trainable=False, weights=[pretrained])(inp)\n",
+    "    embeddings=Embedding(len(vocabulary), vector_size, mask_zero=True, trainable=False, weights=[pretrained])(inp)\n",
     "    rnn = LSTM(rnn_size, activation='relu', return_sequences=True)(embeddings)\n",
     "    outp=Dense(class_count, activation=\"softmax\")(rnn)\n",
     "    return Model(inputs=[inp], outputs=[outp])\n",
@@ -1009,27 +992,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_1\"\n",
+      "Model: \"model_3\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 113)               0         \n",
+      "input_3 (InputLayer)         (None, 113)               0         \n",
       "_________________________________________________________________\n",
-      "embedding_1 (Embedding)      (None, 113, 300)          15000600  \n",
+      "embedding_3 (Embedding)      (None, 113, 300)          15000600  \n",
       "_________________________________________________________________\n",
-      "time_distributed_1 (TimeDist (None, 113, 100)          30100     \n",
+      "lstm_2 (LSTM)                (None, 113, 100)          160400    \n",
       "_________________________________________________________________\n",
-      "time_distributed_2 (TimeDist (None, 113, 4)            404       \n",
+      "dense_4 (Dense)              (None, 113, 4)            404       \n",
       "=================================================================\n",
-      "Total params: 15,031,104\n",
-      "Trainable params: 30,504\n",
+      "Total params: 15,161,404\n",
+      "Trainable params: 160,804\n",
       "Non-trainable params: 15,000,600\n",
       "_________________________________________________________________\n",
       "None\n"
@@ -1037,7 +1020,7 @@
     }
    ],
    "source": [
-    "print(model.summary())"
+    "print(rnn_model.summary())"
    ]
   },
   {
@@ -1161,7 +1144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By including the context, our f-score increase by over 15 points!"
+    "By including the context, our f-score increase by over 15 points! This isn't good performance, but should demonstrate the value of recurrent networks for the task."
    ]
   },
   {
