--- a/rnn_named_entity_recognition.ipynb
+++ b/rnn_named_entity_recognition.ipynb
@@ -187,20 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archive:  wiki-news-300d-1M.vec.zip\n",
-      "  inflating: wiki-news-300d-1M.vec   \n"
+      "Archive:  wiki-news-300d-1M.vec.zip\r\n"
      ]
     }
    ],
    "source": [
-    "!unzip wiki-news-300d-1M.vec.zip"
+    "# Give -n argument so that a possible existing file isn't overwritten \n",
+    "!unzip -n wiki-news-300d-1M.vec.zip"
    ]
   },
   {
