Tweak for colab

--- a/rnn_named_entity_recognition.ipynb
+++ b/rnn_named_entity_recognition.ipynb
@@ -621,11 +621,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import keras\n",
+    "from tensorflow import keras\n",
     "\n",
     "\n",
     "def _convert_to_entities(input_sequence):\n",
