Tweak for colab

--- a/rnn_named_entity_recognition.ipynb
+++ b/rnn_named_entity_recognition.ipynb
@@ -969,7 +969,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.layers import LSTM\n",
+    "from tensorflow.keras.layers import LSTM\n",
     "\n",
     "\n",
     "example_count, sequence_len = vectorized_data_padded.shape\n",
