--- a/bert_text_classification.ipynb
+++ b/bert_text_classification.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "## Configuration\n",
     "\n",
-    "The following variables configure a few aspects of the data, model, and training process. To adapt this example to a different dataset, you'll probably want to change these to match."
+    "The following variables configure a few aspects of the data, model, and training process. To adapt this example to a different dataset, you'll probably want to change these to match.\n",
+    "\n",
+    "Note in particular that we're limiting the number of examples to just 1000 out of the original 25000 to make training faster."
    ]
   },
   {
@@ -136,13 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Note: truncating examples from 25000 to 1000\n",
       "<class 'list'>\n",
       "<class 'dict'>\n",
       "dict_keys(['class', 'text'])\n",
@@ -161,7 +164,9 @@
     "random.seed(1234)    # This makes the shuffle produce the same order every time\n",
     "random.shuffle(data)\n",
     "\n",
-    "data = data[:MAX_EXAMPLES]    # Truncate to MAX_EXAMPLES\n",
+    "if len(data) > MAX_EXAMPLES:\n",
+    "    print('Note: truncating examples from {} to {}'.format(len(data), MAX_EXAMPLES))\n",
+    "    data = data[:MAX_EXAMPLES]\n",
     "\n",
     "# Look at the data\n",
     "print(type(data))\n",
@@ -977,21 +982,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"strided_slice_2:0\", shape=(?, 768), dtype=float32)\n"
+      "Tensor(\"strided_slice_4:0\", shape=(?, 768), dtype=float32)\n"
      ]
     }
    ],
    "source": [
     "bert_out = pretrained_model.outputs[0][:,0]\n",
     "\n",
-    "print(pretrained_output)"
+    "print(bert_out)"
    ]
   },
   {
