Prediction with trained model

--- a/bert_text_classification.ipynb
+++ b/bert_text_classification.ipynb
@@ -1190,6 +1190,59 @@
     "\n",
     "(Caveat: by downsampling all of the data, we also ended up with a small dev set, so these results may have substantial variance.)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict with the trained model\n",
+    "\n",
+    "Let's run a few simple cases through the trained model to illustrate its use."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_one(text):\n",
+    "    # This function takes a string, vectorizes it with the tokenizer,\n",
+    "    # and returns the model prediction. The vectorization follows\n",
+    "    # the pattern we saw above for training data preparation:\n",
+    "    tid, sid = tokenizer.encode(text, max_len=INPUT_LENGTH)\n",
+    "    test_token_indices = [tid]\n",
+    "    test_segment_ids = [sid]\n",
+    "    test_X = [np.array(test_token_indices), np.array(test_segment_ids)]\n",
+    "    # Run model.predict for this single case \n",
+    "    predictions = model.predict(test_X)\n",
+    "    # model.predict always returns a sequence. As we there's only a single input,\n",
+    "    # we'll just return the value of the first (and only) element.\n",
+    "    return predictions[0]\n",
+    "\n",
+    "\n",
+    "# Get the index of the positive label (\"pos\"). Note that as LabelEncoder works\n",
+    "# on lists, we need to wrap the label in a list when calling it, and take the\n",
+    "# first (and only) element from the returned sequence.\n",
+    "pos_index = label_encoder.transform(['pos'])[0]\n",
+    "\n",
+    "\n",
+    "# Test the model with a few strings of our own.\n",
+    "test_strings = [\n",
+    "  'This movie is amazing!',\n",
+    "  'This movie is amazingly bad!',\n",
+    "  'The plot is boring, but the action is exciting.',\n",
+    "  'The plot is exciting, but the action is boring.',\n",
+    "  'I am not sure what to think about this movie.',\n",
+    "]\n",
+    "\n",
+    "\n",
+    "for s in test_strings:\n",
+    "    pred = predict_one(s)\n",
+    "    # The model returns the probability of both labels (pos/neg) where the\n",
+    "    # neg = 1-pos (softmax). Just print out the positive label probability.\n",
+    "    print('Positive probability {:.1%}\\t{}'.format(pred[pos_index], s))"
+   ]
   }
  ],
  "metadata": {
