--- a/bert_text_classification.ipynb
+++ b/bert_text_classification.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Text classification with BERT\n",
     "\n",
-    "This notebook briefly demonstrates fine-tuning a pretrained BERT model to a text classification task."
+    "This notebook briefly demonstrates fine-tuning a pretrained BERT model to a text classification task.\n",
+    "\n",
+    "You probably want to run this notebook with GPU acceleration, as BERT fin"
    ]
   },
   {
