--- a/bert_text_classification.ipynb
+++ b/bert_text_classification.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook briefly demonstrates fine-tuning a pretrained BERT model to a text classification task.\n",
     "\n",
-    "You probably want to run this notebook with GPU acceleration, as BERT fin"
+    "You probably want to run this notebook with GPU acceleration, as fine-tuning BERT on CPU can be fairly slow even with a comparatively small dataset."
    ]
   },
   {
@@ -19,7 +19,9 @@
     "\n",
     "The following variables configure a few aspects of the data, model, and training process. To adapt this example to a different dataset, you'll probably want to change these to match.\n",
     "\n",
-    "Note in particular that we're limiting the number of examples and the maximum sequence length to make training faster."
+    "Note in particular that we're limiting the number of examples and the maximum sequence length to make training faster. \n",
+    "\n",
+    "When running on GPU, it's also necessary to make sure that the input length and batch size are not so large as to cause a batch to exceed GPU memory. If you're getting a message like `Resource exhausted: OOM when allocating tensor`, try smaller numbers for these."
    ]
   },
   {
@@ -50,7 +52,7 @@
    "source": [
     "## Package setup\n",
     "\n",
-    "We'll use [keras-bert](https://github.com/CyberZHG/keras-bert). Make sure the package is installed."
+    "We'll use [keras-bert](https://github.com/CyberZHG/keras-bert). Make sure the package is installed. (`pip` is the Python [package installer](https://pip.pypa.io/en/stable/))"
    ]
   },
   {
@@ -91,7 +93,7 @@
    "source": [
     "## Tensorflow configuration\n",
     "\n",
-    "(This is a technical detail that is not related to the model.)"
+    "We'll need set an environment variable for keras-bert to use `tensorflow.python.keras`. (This is a technical detail that is not related to the model.)"
    ]
   },
   {
@@ -112,7 +114,7 @@
    "source": [
     "## Download dataset\n",
     "\n",
-    "We'll use the familiar IMDB dataset in JSON format."
+    "We'll use the IMDB dataset in JSON format. (This should be familiar to you from previous notebooks in this course.)"
    ]
   },
   {
@@ -138,7 +140,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data"
+    "## Load data\n",
+    "\n",
+    "We load the IMDB data and shuffle it as usual."
    ]
   },
   {
@@ -178,6 +182,13 @@
     "print(type(data[0]))\n",
     "print(data[0].keys())\n",
     "print(data[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Separate the texts and labels into lists of their own."
    ]
   },
   {
@@ -324,10 +335,10 @@
     "vocab = []\n",
     "with open(bert_vocab_path) as f:\n",
     "    for i, line in enumerate(f):\n",
-    "        vocab.append(line.rstrip('\\n'))\n",
+    "        vocab.append(line.rstrip('\\n'))    # rstrip to remove newline characters\n",
     "\n",
     "\n",
-    "# print a list with every 500th vocabulary item\n",
+    "# Print a list with every 500th vocabulary item\n",
     "print(vocab[0::500])"
    ]
   },
@@ -335,7 +346,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load BERT configuration"
+    "## Load BERT configuration\n",
+    "\n",
+    "The configuration is just a JSON file, so we can read it in with `json.load` from the python `json` library.\n",
+    "\n",
+    "We won't actually need to use these configuration details directly (keras-bert takes care of them for us), so this is just here to show what information is contained in the config file."
    ]
   },
   {
@@ -377,7 +392,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create BERT tokenizer"
+    "## Create BERT tokenizer\n",
+    "\n",
+    "To create the tokenizer, we'll need a mapping from vocabulary items to their corresponding integer indices. We do this conventionally using `enumerate`."
    ]
   },
   {
@@ -423,7 +440,9 @@
     "* Adding special tokens: `Sentence`  → `[CLS]` `Sentence` `[SEP]`\n",
     "* Mapping to integer indices\n",
     "* Generating segment sequence\n",
-    "* (Optional) padding and truncation to length"
+    "* (Optional) padding and truncation to length\n",
+    "\n",
+    "In the following example, notice how words not in the dictionary are broken up into subwords (with continuation parts starting with `##`) and how unknown _characters_ are mapped to a special unknown word token `[UNK]`."
    ]
   },
   {
@@ -474,7 +493,7 @@
    "source": [
     "## Vectorize data\n",
     "\n",
-    "We'll use the familiar `LabelEncoder` for labels and the keras-bert `Tokenizer` for text data."
+    "We'll use the familiar `LabelEncoder` for labels and the keras-bert `Tokenizer` for text data. `Y` is the representation of the labels that will be given to the model for training."
    ]
   },
   {
@@ -513,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Keep token indices and segment ids in separate lists and store as numpy arrays:"
+    "Keep token indices and segment ids in separate lists and store as numpy arrays. `X` here is the final vectorized form of the input we'll be providing to the model for training. "
    ]
   },
   {
@@ -595,6 +614,9 @@
     "\n",
     "token_indices, segment_ids = [], []\n",
     "for text in texts:\n",
+    "    # tokenizer.encode() returns a sequence of token indices\n",
+    "    # and a sequence of segment IDs. BERT expects both as input,\n",
+    "    # even if the segments IDs are just all zeros (like here).\n",
     "    tid, sid = tokenizer.encode(text, max_len=INPUT_LENGTH)\n",
     "    token_indices.append(tid)\n",
     "    segment_ids.append(sid)\n",
@@ -685,6 +707,7 @@
     }
    ],
    "source": [
+    "# This is a keras model, so we can figure out what inputs it takes like so:\n",
     "pretrained_model.inputs"
    ]
   },
@@ -705,7 +728,15 @@
     }
    ],
    "source": [
+    "# And similarly for outputs:\n",
     "pretrained_model.outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, the model takes `Input-Token` and `Input-Segment` inputs, both of dimension (batch-size, input-length), and produces a single output tensor of dimension (batch-size, input-length, hidden-dim). The input matches our `X`, but we'll need to work on the output a bit as our `Y` is just a label for each input, not a sequence of labels."
    ]
   },
   {
@@ -980,6 +1011,12 @@
     "\n",
     "We'll make a *very* simple model for text classification: just attach a dense layer to the output for the special `[CLS]` token, and connect the model inputs to the BERT model inputs.\n",
     "\n",
+    "Recall that in the BERT input representation, each sequence starts with the special `[CLS]` token and the corresponding output is used in BERT pretraining for the next sentence prediction task. We'll use the `[CLS]` output similarly for our classification task.\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/TurkuNLP/Deep_Learning_in_LangTech_course/master/bert-representation.png\" style=\"width: 80%\">\n",
+    "\n",
+    "(Figure from [Devlin et al.](https://arxiv.org/pdf/1810.04805.pdf))\n",
+    "\n",
     "First, let's find the output"
    ]
   },
@@ -1023,9 +1060,20 @@
     }
    ],
    "source": [
+    "# model.outputs is a list, here with a single item. Here\n",
+    "# pretrained_model.outputs[0] just grabs that item (the output tensor).\n",
+    "# Indxing that tensor with [:,0] gives the first position in the sequence\n",
+    "# for all elements in the batch (the `:`).\n",
     "bert_out = pretrained_model.outputs[0][:,0]\n",
     "\n",
     "print(bert_out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we can simply create our model. This is just basic Keras, where the pretrained BERT model is behaving essentially as a layer of our \"wrapping\" model."
    ]
   },
   {
@@ -1109,7 +1157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Note: this will take a fair bit of time unless you're running with GPU acceleration.)"
+    "Training, as usual. (Note: this will take a fair bit of time unless you're running with GPU acceleration.)"
    ]
   },
   {
@@ -1148,7 +1196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's plot that"
+    "Let's plot that training history:"
    ]
   },
   {
