--- a/hf_trainer_mlp.ipynb
+++ b/hf_trainer_mlp.ipynb
@@ -6,7 +6,8 @@
       "name": "my_hf_trainer_mlp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -2076,6 +2077,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/TurkuNLP/Deep_Learning_in_LangTech_course/blob/master/hf_trainer_mlp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "# Setup\n",
         "\n",
@@ -2098,7 +2109,7 @@
       "metadata": {
         "id": "fKPHBYptQDsK"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2129,7 +2140,7 @@
       "metadata": {
         "id": "-aN2R9OxuRUb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2145,7 +2156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "h-QSkx0O2sMK"
       },
@@ -2191,7 +2202,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2261,7 +2272,7 @@
       "metadata": {
         "id": "6WZKk7xW3OMu"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2286,7 +2297,7 @@
       "metadata": {
         "id": "rNxvxKe7wWBx"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2312,7 +2323,7 @@
       "metadata": {
         "id": "OJi4jsAtwivq"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2342,7 +2353,7 @@
         "id": "OA_uAKT9a3Vs",
         "outputId": "1846f4bb-b673-465c-a396-73a76ccbc5dc"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2431,7 +2442,7 @@
         "id": "dvu2uxrk6_YW",
         "outputId": "efbb3256-67b6-4f22-9cc5-a1ed8d8ec603"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2519,7 +2530,7 @@
         "id": "itvflIheqO-A",
         "outputId": "a7d26837-1f82-4a86-852e-65fc01fe87b3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2567,7 +2578,7 @@
         "id": "KI3kyD3vry8C",
         "outputId": "9c482b38-8874-4bd9-fbfd-f12539ec2f08"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2602,7 +2613,7 @@
       "metadata": {
         "id": "PCg62XoYn2k5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2638,7 +2649,7 @@
       "metadata": {
         "id": "MYOtKJu7Mohd"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2664,7 +2675,7 @@
         "id": "RwB5pZWZo4qg",
         "outputId": "81c942c3-cbad-4bee-f2db-af9d4a59f6e0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2748,7 +2759,7 @@
         "id": "33xMYRd0q2B9",
         "outputId": "48e4e524-7ab0-4454-a3cd-c36c83fe3660"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2815,7 +2826,7 @@
         "id": "pcrUMb0ewBZ_",
         "outputId": "50c86913-c8ce-4892-fef8-b2dec28464dd"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2881,7 +2892,7 @@
         "id": "DKPChR9OeRcb",
         "outputId": "aee581d6-044f-44c6-fdc5-ad5bae89eeda"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2969,7 +2980,7 @@
       "metadata": {
         "id": "vP4FtrMwCpGi"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3002,7 +3013,7 @@
       "metadata": {
         "id": "u3jxIItb0BL9"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3047,7 +3058,7 @@
         "id": "AoEoWsj4P_zN",
         "outputId": "db83998a-8d7a-49e0-fe9e-66386c2472d1"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3161,7 +3172,7 @@
         "id": "9nlEwpnF2Vow",
         "outputId": "b124ddd8-4328-431b-8979-3e03159a07cb"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3207,7 +3218,7 @@
         "id": "8PKRUTav8yGs",
         "outputId": "e191ef9a-9687-4ead-951f-f77e71aa0a7d"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
