--- a/hf_trainer_mlp.ipynb
+++ b/hf_trainer_mlp.ipynb
@@ -3475,10 +3475,10 @@
       ],
       "metadata": {
         "id": "fKPHBYptQDsK",
-        "outputId": "8700c847-61ac-4261-9382-95347d6edb3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8700c847-61ac-4261-9382-95347d6edb3c"
       },
       "execution_count": 1,
       "outputs": [
@@ -4031,7 +4031,6 @@
       ],
       "metadata": {
         "id": "MYOtKJu7Mohd",
-        "outputId": "fc852d8a-9b22-4a3d-9d5e-5e7f27d84496",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 145,
@@ -4081,7 +4080,8 @@
             "3926a0e1b55c4c80a24cf5905e018cb6",
             "ab3802fd20a1477ca84944a2747a79c4"
           ]
-        }
+        },
+        "outputId": "fc852d8a-9b22-4a3d-9d5e-5e7f27d84496"
       },
       "execution_count": 13,
       "outputs": [
@@ -4963,12 +4963,12 @@
         "print('Accuracy:', eval_results['eval_accuracy'])"
       ],
       "metadata": {
-        "id": "hpOM2ZwErMGf",
-        "outputId": "5483f752-fa9f-4083-f063-3450e07bb488",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 146
-        }
+        },
+        "id": "hpOM2ZwErMGf",
+        "outputId": "5483f752-fa9f-4083-f063-3450e07bb488"
       },
       "execution_count": 34,
       "outputs": [
@@ -5003,6 +5003,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Extra time left?\n",
+        "\n",
+        "* Read through the TrainingArguments documentation, try to understand at least some parts of it https://huggingface.co/docs/transformers/main_classes/trainer#transformers.TrainingArguments\n",
+        "* Read through Torch tensor operations, try to understand at least some parts of it: https://pytorch.org/docs/stable/tensors.html\n",
+        "* Run the model with different random seeds, how much do the results change?\n",
+        "* Run the model with different parameters (hidden layer width, learning rate, etc), how much do the results change?\n"
+      ],
+      "metadata": {
+        "id": "8UT5MV1LtSBh"
+      }
     }
   ]
 }
