--- a/hf_trainer_bert.ipynb
+++ b/hf_trainer_bert.ipynb
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "4pquj9Xoxaza"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "cQ63zw6BY7tn"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "ZH2bY_GjZG24"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,9 @@
         "\n",
         "# Download and prepare data\n",
         "\n",
-        "We will again use the `datasets` library function [`load_dataset`](https://huggingface.co/docs/datasets/master/en/package_reference/loading_methods#datasets.load_dataset) to load a dataset for our experiments."
+        "We will again use the `datasets` library function [`load_dataset`](https://huggingface.co/docs/datasets/master/en/package_reference/loading_methods#datasets.load_dataset) to load a dataset for our experiments.\n",
+        "\n",
+        "In order to speedup the processing, the unused *unsupervised* partition is deleted and the test section is downsampled."
       ],
       "metadata": {
         "id": "W4x7GbT2ZKUJ"
@@ -146,7 +148,7 @@
         "id": "5DKskTuoyCf-",
         "outputId": "c5245c46-624f-45e5-b125-0fbba4feec9b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +194,7 @@
         "id": "y3K4Fkz7yce7",
         "outputId": "0c33e17d-bd8d-43a4-aa17-81aa2d89d442"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +235,7 @@
         "id": "Wd__TIUnf9PD",
         "outputId": "998bcb4b-0aea-4b1c-f3f1-3c6149ce2a29"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,9 +282,7 @@
       "source": [
         "To tokenize and vectorize the texts of our dataset, we will again use previously created tokenizers through the simple [`AutoTokenizer`](https://huggingface.co/docs/transformers/model_doc/auto#transformers.AutoTokenizer) class.\n",
         "\n",
-        "The [`AutoTokenizer.from_pretrained`](https://huggingface.co/docs/transformers/model_doc/auto#transformers.AutoTokenizer.from_pretrained) function can load the tokenizer associated with any of the large number of models found in the [Hugging Face models repository](https://huggingface.co/models). Here, our texts are in English, and we'll load the tokenizer for the [`bert-base-cased`](https://huggingface.co/bert-base-cased) model.\n",
-        "\n",
-        "(**Note**: we're not actually using the BERT model here, just its tokenizer.) "
+        "The [`AutoTokenizer.from_pretrained`](https://huggingface.co/docs/transformers/model_doc/auto#transformers.AutoTokenizer.from_pretrained) function can load the tokenizer associated with any of the large number of models found in the [Hugging Face models repository](https://huggingface.co/models). Here, our texts are in English, and we'll load the tokenizer for the [`bert-base-cased`](https://huggingface.co/bert-base-cased) model.\n"
       ],
       "metadata": {
         "id": "H9RBff6Rkfyt"
@@ -339,7 +339,7 @@
           ]
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -390,7 +390,7 @@
       "source": [
         "As in the [MLP notebook](https://github.com/TurkuNLP/Deep_Learning_in_LangTech_course/blob/master/hf_trainer_mlp.ipynb), we will define a simple tokenization function and tokenize and vectorize our whole dataset with the tokenizer by calling the [`Dataset.map`](https://huggingface.co/docs/datasets/package_reference/main_classes.html#datasets.Dataset.map) function.\n",
         "\n",
-        "Note that here we're providing a `max_length` argument and `truncation=True` in the tokenizer call. This limits the maximum length of outputs to the given length (see the [tokenizers documentation](https://huggingface.co/docs/transformers/preprocessing#everything-you-always-wanted-to-know-about-padding-and-truncation) for details)."
+        "Note that here we're providing a `max_length` argument and `truncation=True` in the tokenizer call. This limits the maximum length of outputs to the given length (see the [tokenizers documentation](https://huggingface.co/docs/transformers/preprocessing#everything-you-always-wanted-to-know-about-padding-and-truncation) for details). **The maximum sequence length for BERT models is usually 512 due to the trained position embeddings.**"
       ],
       "metadata": {
         "id": "mjEeyPsXc12X"
@@ -401,7 +401,7 @@
       "source": [
         "# Define a simple function that applies the tokenizer\n",
         "\n",
-        "# maximum length of BERT models is 512 (position embeddings)\n",
+        "# maximum length of BERT models is 512 due to the position embeddings\n",
         "\n",
         "def tokenize(example):\n",
         "    return tokenizer(\n",
@@ -445,7 +445,7 @@
         "id": "K2c4lFKTywlu",
         "outputId": "6b171a09-e326-4171-eba0-261ef1619c9c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -484,10 +484,11 @@
         "\n",
         "# Build model\n",
         "\n",
-        "* Ready-made model from [HF transformers](https://huggingface.co/transformers/)\n",
-        "* BertForSequenceClassification\n",
+        "* Ready-made model implementation from [HF transformers](https://huggingface.co/transformers/)\n",
+        "* BertForSequenceClassification (sequence of tokens in, label out)\n",
         "  * Pre-trained BERT encoder\n",
-        "  * CLS embedding + linear + tanh\n",
+        "  * Pooler output: CLS embedding + linear layer + tanh\n",
+        "  * Classification layer\n",
         "* [Source code](https://github.com/huggingface/transformers/blob/v4.17.0/src/transformers/models/bert/modeling_bert.py#L1501)"
       ],
       "metadata": {
@@ -510,7 +511,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +571,7 @@
       "metadata": {
         "id": "gVW-yGhYItWk"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -605,7 +606,7 @@
       "metadata": {
         "id": "miilVFfCIhR1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -641,7 +642,7 @@
       "metadata": {
         "id": "0EFQebkDYXES"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -656,7 +657,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(dataset[\"test\"][\"label\"][:50])\n",
+        "print(dataset[\"test\"][\"label\"][:50]) # print a sample of test labels to see that they are not ordered\n",
         "\n",
         "trainer = None\n",
         "trainer = transformers.Trainer(\n",
@@ -680,7 +681,7 @@
         "id": "4lKiSRNJVOvJ",
         "outputId": "a99cebcc-cb1c-4eb3-c183-b13eb1f2783c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,7 +806,7 @@
           "height": 159
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -873,7 +874,7 @@
           "height": 265
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -902,7 +903,7 @@
           "height": 269
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
